--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Math Challenge by Joe</title> 
     <meta name="google-site-verification" content="ubsKVxsbRDFsTa4-rmc6E9UsbNsG9X9vA0Jd6SoP5EA" />
     <meta name="description" content="A fun math game made using Svelte by Chee Yong Lee (Joe)" />
-    <script type="module" crossorigin src="./assets/scripts.js"></script>
+    <script type="module" crossorigin src="./assets/script.js"></script>
     <link rel="stylesheet" href="./assets/styles.css">
   </head>
   <body>
